# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CLOSE_ISSUES.md  CLOSE_ISSUES_INSTRUCTIONS.txt  CLOSE_ISSUES_MANUAL.md  CROSS_PLATFORM_TEST_ANALYSIS.md  GITHUB_ISSUES.md  ISSUES_RESOLVED.md  ISSUE_TRIAGE.md  LICENSE  Makefile  README.md  README_dev.md  TEST_RESULTS.md  conftest.py  issues_all.json  issues_open.json  issues_page1.json  pytest.ini  relay  requirements.txt  setup.cfg  temp  temp.py
.circleci/: config.yml
.github/scripts/: fix-oclint-macos.sh
.github/workflows/: gh_actions_macos.yml  gh_actions_ubuntu.yml  gh_actions_windows.yml
docs/: CONVERSATION_CONTEXT.md  CROSS_PLATFORM_FIXES.md  ISSUE_36_RESOLUTION.md  MACOS_SDK_SETUP.md  README.md  TEST_NORMALIZATION.md
hooks/: clang-format  clang-tidy  clang_format.py  clang_format_hook.py  clang_tidy.py  clangformat.py  clangtidy.py  cppcheck.py  cpplint.py  include_what_you_use.py  line_diff.py  oclint  oclint.py  uncrustify.py  utils  utils.py
media/: all_failed.txt
scripts/: minify_uncrustify_defaults.py  test_env.sh
testing/: utils.py
testing/resources/: test_free_style.cpp  test_google_style.cpp
tests/: TEST_SUMMARY.md  conftest.py  hooks_test.py  pass_configurations.md  run_tests  run_tests.ps  run_tests.ps1  run_tests.sh  table_tests_integration.json  test.py  test_clang_format_hooks.py  test_dashp.py  test_edge_cases.py  test_env.sh  test_error_scenarios.py  test_hooks.py  test_integration.py  test_iss36.py  test_line_diff.py  test_logic_regression.py  test_utils.py  test_utils_functions.py  test_versions.py  uncrustify_defaults.cfg
tests/files/: err.cpp  good.cpp  iwyu-err.hpp  ok.cpp  test.c  test.cpp
tests/test_repo/: .pre-commit-config.yaml  err.c  err.cpp  ok-iwyu.hpp  ok.c  test_integration_expected_stderr.output  test_repo_expected_stderr.txt
