[metadata]
name = hooks
version = 1.0.0
description = pre-commit hooks for C linters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pocc/pre-commit-hooks
author = Ross Jacobs
author_email = rj@swit.sh
license = Apache2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache2 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    clang-format-hook = hooks.clang_format:main
    clang-tidy-hook = hooks.clang_tidy:main
    oclint-hook = hooks.oclint:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
