[metadata]
name = CLinters
version = 1.3.5
description = pre-commit hooks for C linters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pocc/pre-commit-hooks
author = Ross Jacobs
author_email = rj@swit.sh
license = Apache2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.8

[options.entry_points]
console_scripts =
    clang-format-hook = hooks.clang_format:main
    clang-tidy-hook = hooks.clang_tidy:main
    oclint-hook = hooks.oclint:main
    uncrustify-hook = hooks.uncrustify:main
    cppcheck-hook = hooks.cppcheck:main
    cpplint-hook = hooks.cpplint:main
    include-what-you-use-hook = hooks.include_what_you_use:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
